# Retinex-Image-Enhancement

./: CMakeLists.txt  package.xml
Retinex/: CMakeLists.txt
Retinex/Scripts/: multiscale_scale.py  retinex.py  single_scale.py  tools.py
Scripts/: multiscale_scale.py  single_scale.py
cfg/: MSRetinex.cfg  SSRetinex.cfg
config/: config.yaml  ros_config.yaml
scripts/: multiscale_scale.py  process_imgs_folder.py  retinex.py  single_scale.py  tools.py
scripts_sh/: process_folders_auto.sh
